; ModuleID = '/home/carl/AnghaBench/git/extr_refs.c_ref_resolves_to_object.c'
source_filename = "/home/carl/AnghaBench/git/extr_refs.c_ref_resolves_to_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }

@REF_ISBROKEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"%s does not point to a valid object!\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ref_resolves_to_object(i8* %0, %struct.object_id* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.object_id*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store %struct.object_id* %1, %struct.object_id** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @REF_ISBROKEN, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %22

13:                                               ; preds = %3
  %14 = load %struct.object_id*, %struct.object_id** %6, align 8
  %15 = call i32 @has_object_file(%struct.object_id* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %21, label %17

17:                                               ; preds = %13
  %18 = call i32 @_(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @error(i32 %18, i8* %19)
  store i32 0, i32* %4, align 4
  br label %22

21:                                               ; preds = %13
  store i32 1, i32* %4, align 4
  br label %22

22:                                               ; preds = %21, %17, %12
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32 @has_object_file(%struct.object_id*) #1

declare dso_local i32 @error(i32, i8*) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
